[package]
name = "mars-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
rapier2d = { version = "0.17.2", features = ["simd-stable"] }
nalgebra = {version = "0.32.3", features = ["convert-glam015"]}
